# cs3219-ay2526s1-project-g12

./: .gitignore  README.md  docker-compose.template.yml
.github/workflows/: google-cloudrun-docker.yml  lint.yml  pytest-ms.yml  pytest-qhs.yml  pytest-qs.yml
PeerPrep/: .env.template  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json
PeerPrep/src/frontend/: LandingPage.tsx  main.tsx  vite-env.d.ts
PeerPrep/src/frontend/api/: ApiClient.tsx  CollaborationApi.tsx  MatchingApi.tsx  QuestionApi.tsx  QuestionHistoryApi.tsx  UserApi.tsx
PeerPrep/src/frontend/assets/: styles.css
PeerPrep/src/frontend/components/: CategoryChip.tsx  MatchCard.tsx  NavBar.tsx  NotFoundRedirect.tsx  ProtectedRoute.tsx  QuestionItem.tsx  QuestionList.tsx  api.tsx
PeerPrep/src/frontend/components/Collab/: CodeEditor.tsx  CollabSession.tsx  ProblemPanel.tsx  TopBar.tsx
PeerPrep/src/frontend/components/Match/: MatchCard.tsx  MatchConfirmed.tsx  MatchFound.tsx  MatchIdle.tsx  MatchSearching.tsx  TimerDisplay.tsx
PeerPrep/src/frontend/config/: NavConfig.tsx  RouteConfig.tsx
PeerPrep/src/frontend/context/: AuthContext.tsx  CollabProviderContext.tsx  VoiceConnectionManager.tsx
PeerPrep/src/frontend/hooks/: useMatchTimer.ts  useMatching.ts
PeerPrep/src/frontend/layouts/: AuthLayout.tsx  MainLayout.tsx
PeerPrep/src/frontend/pages/: Account.tsx  App.tsx  CollabEditor.tsx  Dashboard.tsx  EditQuestion.tsx  LandingPage.tsx  Matching.tsx  NewQuestion.tsx  Questions.tsx  Verify.tsx
PeerPrep/src/frontend/pages/auth/: ForgotPassword.tsx  Login.tsx  Register.tsx  RequestVerify.tsx  ResetPassword.tsx
PeerPrep/src/frontend/types/: MatchState.ts  Mutable.tsx  NavButton.tsx  Question.tsx  Role.tsx  User.tsx
PeerPrep/src/frontend/utils/: formatError.ts
ai/: usage-log.md
api-gateway/: .env.template  .gitignore  Dockerfile  main.py  pyproject.toml
api-gateway/controllers/: gateway_controller.py  websocket_manager.py
api-gateway/models/: WebSocketManager.py  api_models.py  registry_models.py
api-gateway/routes/: auth_router.py  dynamic_router.py  registry_router.py  user_router.py  websocket_router.py
api-gateway/service/: cookie_management.py  redis_settings.py  registry.py  settings.py
api-gateway/utils/: logger.py  utils.py
collaboration-svc/: .env.template  Dockerfile  pyproject.toml  routes.py
collaboration-svc/controllers/: heartbeat_controller.py  room_controller.py  websocket_controller.py
collaboration-svc/models/: WebSocketManager.py  api_models.py
collaboration-svc/services/: redis_event_queue.py  redis_room_service.py
collaboration-svc/utils/: utils.py
expire-observer-svc/: .dockerignore  Dockerfile  main.py  pyproject.toml
expire-observer-svc/utils/: utils.py
expire_observer_svc/: .env  .env.template  main.py  pyproject.toml
matching-svc/: .env.template  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  routes.py
matching-svc/controllers/: heartbeat_controller.py  matching_controller.py
matching-svc/models/: api_models.py  queue_models.py  websocket_models.py
matching-svc/service/: redis_confirmation_service.py  redis_event_queue.py  redis_matchmaking_service.py  redis_message_service.py  redis_queue_service.py  redis_service.py
matching-svc/tests/controllers/: test_matching_controller.py
matching-svc/tests/utils/: test_utils.py
matching-svc/utils/: utils.py
qns-hist-svc/: .env.template  Dockerfile  README.md  entrypoint.sh  pyproject.toml  routes.py
qns-hist-svc/controllers/: heartbeat_controller.py  history_controller.py  task_controller.py
qns-hist-svc/migrations/models/: 0_20251026173532_init.py  1_20251026181752_update.py  2_20251027025224_update.py  3_20251027202824_update.py
qns-hist-svc/models/: api_models.py  db_models.py  models.py
qns-hist-svc/service/: database_svc.py  feedback_ai_svc.py
qns-hist-svc/tests/controllers/: test_history_controller.py
qns-hist-svc/tests/models/: test_api_models.py  test_models.py
qns-hist-svc/tests/service/: test_feedback_ai_svc.py
qns-hist-svc/utils/: logger.py  utils.py
qns-svc/: .env.template  entrypoint.sh  main.py  pyproject.toml  routes.py
qns-svc/controllers/: heartbeat_controller.py  question_controller.py
qns-svc/migrations/models/: 0_20250921225359_init.py  1_20251018155752_update.py
qns-svc/models/: api_models.py  db_models.py  models.py
qns-svc/service/: database_svc.py
qns-svc/tests/: conftest.py  test_routes.py
qns-svc/tests/controllers/: test_question_controller.py
qns-svc/tests/models/: test_api_models.py  test_models.py
qns-svc/tests/utils/: test_utils.py
qns-svc/utils/: utils.py
signaling-svc/: Dockerfile  package-lock.json  package.json  server.js
support/qns-svc-import/: import.ipynb  pyproject.toml
user-svc/: .env.template  .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml
user-svc/alembic/: README
user-svc/alembic/versions/: 0d1e6130f959_create_access_token_table.py  19f259a5c711_drop_access_token_table.py
user-svc/controllers/: heartbeat_controller.py  user_controller.py
user-svc/models/: api_models.py  db_models.py
user-svc/routes/: auth_router.py  user_router.py
user-svc/service/: auth_svc.py  db_svc.py  mail_svc.py
user-svc/utils/: utils.py
user_svc/: .env.template  main.py  pyproject.toml  routes.py
user_svc/alembic/: env.py
user_svc/alembic/versions/: 0d1e6130f959_create_access_token_table.py  b1485f88291c_create_user_and_roles_tables.py
user_svc/auth/: auth.py  dependencies.py  router.py  schemas.py  user_manager.py
user_svc/controllers/: user_controller.py
user_svc/db/: models.py  session.py
user_svc/models/: api_models.py  db_models.py
user_svc/routes/: auth_router.py
user_svc/service/: db_svc.py
user_svc/utils/: logger.py  utils.py
