[project]
name = "matching-svc"
version = "0.1.0"
description = "Matching Service for PeerPrep"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi[standard]>=0.118.0",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib", "--cov", "--cov-report=term-missing"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
